<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.nickwelna.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gopher_mens_hockey_title"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/goals"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp">

                    <Button
                        android:id="@+id/score_plus_1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="score1plus"
                        android:text="@string/plus" />

                    <TextView
                        android:id="@+id/score_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/score_plus_1"
                        android:text="@string/start_value"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                        android:textColor="@color/black" />


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/penalties"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/penalty_plus_1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="penalty1plus"
                        android:text="@string/plus" />

                    <TextView
                        android:id="@+id/penalty_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/penalty_plus_1"
                        android:text="@string/start_value"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                        android:textColor="@color/black" />


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/und_mens_hockey_title"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/goals"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp">

                    <Button
                        android:id="@+id/score_plus_2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="score2plus"
                        android:text="@string/plus" />

                    <TextView
                        android:id="@+id/score_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/score_plus_2"
                        android:text="@string/start_value"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                        android:textColor="@color/black" />


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/penalties"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/penalty_plus_2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="penalty2plus"
                        android:text="@string/plus" />

                    <TextView
                        android:id="@+id/penalty_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/penalty_plus_2"
                        android:text="@string/start_value"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                        android:textColor="@color/black" />


                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="reset"
            android:text="@string/reset"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>
